--- a/sunday_16_10/task3.html
+++ b/sunday_16_10/task3.html
@@ -7,11 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sunday_16_10/task1.html">task1</a>
-    <a href="sunday_16_10/task2.html">task2</a>
-    <a href="sunday_16_10/task3.html">task3</a>
-    <a href="sunday_16_10/task3.html">task4</a>
-    
-
+    <p>click here to go  to orange or google </p>
+    <a href="https://www.orange.jo/ar/pages/default.aspx"> orange</a>
+    <span>ang</span>
+    <a href="https://www.google.com/"> google</a>
 </body>
 </html>
