--- a/sunday_16_10/task2.html
+++ b/sunday_16_10/task2.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sunday_16_10/task1.html">task1</a>
-    <a href="sunday_16_10/task2.html">task2</a>
-    <a href="sunday_16_10/task3.html">task3</a>
-    <a href="sunday_16_10/task3.html">task4</a>
+    <h1>The First Heading</h1>
+    <hr>
+    <P>Hi i am pragraph . i Am</P>
     
 
+    
 </body>
 </html>
