--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Sunday</h1>
     <a href="sunday_16_10/task1.html">task1</a>
     <a href="sunday_16_10/task2.html">task2</a>
     <a href="sunday_16_10/task3.html">task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
+    
+    <hr>
+    <h1>Monday</h1>
 
+    
 
 </body>
 </html>
