--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <a href="sunday_16_10/task2.html">task2</a>
     <a href="sunday_16_10/task3.html">task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
-    
+
     <hr>
     <h1>Monday</h1>
+    <a href="monday_17_10/task1.html">task1</a>
+    <a href="monday_17_10/task2.html">task2</a>
+    <a href="monday_17_10/task3.html">task3</a>
+    <a href="monday_17_10/task4.html">task4</a>
+    <a href="monday_17_10/task5.html">task5</a>
+
+
 
     
 
