--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <a href="sunday_16_10/task3.html">task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
 
+
     <hr>
+    
     <h1>Monday</h1>
     <a href="monday_17_10/task1.html">task1</a>
     <a href="monday_17_10/task2.html">task2</a>
     <a href="monday_17_10/task3.html">task3</a>
     <a href="monday_17_10/task4.html">task4</a>
     <a href="monday_17_10/task5.html">task5</a>
+
 
     <hr>
 
@@ -37,6 +40,13 @@
     <a href="thursday_20_10/task1.html">task1</a>
     <a href="thursday_20_10/task2.html">task2</a>
     <a href="thursday_20_10/task3.html">task3</a>
+
+
+    <hr>
+
+    <h1>sunday_23_10</h1>
+    <a href="sunday_23_10/task1.html">task1</a>
+    <a href="sunday_23_10/task2.html">task2</a>
 
     
 
