--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     <a href="sunday_23_10/task1.html">task1</a>
     <a href="sunday_23_10/task2.html">task2</a>
 
+
+    <hr>
+
+    <h1>Monday_24_10</h1>
+    <a href="monday_24_10/task1.html">task1</a>
+    <a href="monday_24_10/task2.html">task2</a>
+    
+
+
     
 
 
