--- a/monday_24_10/task2.html
+++ b/monday_24_10/task2.html
@@ -14,7 +14,7 @@
     background-color: rgb(165, 157, 42);
     padding: 20px;
     /* border: solid; */
-    margin: auto;
+    /* margin: auto; */
     width: 400px ;
     height: 100px;
     gap: 10px;
